fix hidden overlap on Camera page

--- a/src/css/pages/Camera.css
+++ b/src/css/pages/Camera.css
@@ -7,6 +7,10 @@
     font-family: 'Bahnschrift', ui-monospace;
 }
 
+.gridcon {
+    padding-top: 20px;
+}
+
 .cameraConCon {
     position: relative;
     justify-content: center;
